--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,6 @@ version: 0.0.1
 
 environment:
   sdk: ^3.4.4
-
 # Add regular dependencies here.
 #dependencies:
   # path: ^1.8.0
@@ -13,3 +12,4 @@ environment:
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  checks: ^0.3.0
