--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,13 @@ name: tree_data_structures
 description: A starting point for Dart libraries or applications.
 version: 0.0.1
 # repository: https://github.com/my_org/my_repo
-
 environment:
   sdk: ^3.4.4
 # Add regular dependencies here.
-#dependencies:
-  # path: ^1.8.0
+dependencies:
+  collection: ^1.19.0
 
 dev_dependencies:
+  checks: ^0.3.0
   lints: ^3.0.0
   test: ^1.24.0
-  checks: ^0.3.0
